fixed more alignment

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,12 @@
 
   }
 
+  .card-header
+  {
+    height: 30%;
+
+  }
+
 
   #about_me
   {
